# Epi-Logos-C-Experiments

./: .clangd  .env.graph-dev  .gitignore  .gitmodules  .mcp.json  .swp  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTINUATION.md  CONTRIBUTING.md  DEPENDENCIES.md  DISTRIBUTION.md  LICENSE-APACHE  LICENSE-MIT  Makefile  Quaternal-Logic.c  README.md  The_Doctrine_of_Vibration_Pages_60-85.md  docker-compose.epi-s2.yml  epi-logos  epi_logos.c  epi_logos.h  repo-ontology.md
Body/S/S0/epi-cli/: Cargo.toml  build.rs
Body/S/S0/epi-cli/contract-inventory/: README.md  s0-membrane-inventory.json
Body/S/S0/epi-cli/schemas/: README.md  package-lock.json  validate-datasets.ts
Body/S/S0/epi-cli/scripts/: kbase.sh
Body/S/S0/epi-cli/src/: lib.rs  main.rs  up.rs
Body/S/S0/epi-cli/tests/: agent_agents.rs  agent_auth.rs  agent_claw_runtime.rs  agent_codex_runtime.rs  agent_def_residency.rs  agent_dirs.rs  agent_docs.rs  agent_extensions.rs  agent_extensions_ta_onta.rs  agent_goal_commands.rs  agent_install.rs  agent_models.rs  agent_plugin_install.rs  agent_plugins.rs  agent_spawn.rs  (+85 more)
Body/S/S0/portal-core/: Cargo.toml
Body/S/S1/hen-compiler-core/: Cargo.toml
Body/S/S2/graph-services/: Cargo.toml
Body/S/S3/epi-spacetime-module/: Cargo.toml
Body/S/S3/gateway/: Cargo.toml
Body/S/S3/gateway-contract/: Cargo.toml
Body/S/S3/graphiti-runtime/: Cargo.toml
Body/S/S3/redis-context/: Cargo.toml
Body/S/S5/epi-gnostic/: .env.example  .gitignore  Dockerfile.graphiti  pyproject.toml
Body/S/S5/epii-autoresearch-core/: Cargo.toml
Body/S/epi-kernel-contract/: Cargo.toml
Body/S/epi-kernel-contract/src/: analysis.rs  constraint.rs  deposit.rs  diagnostic.rs  envelope.rs  ingestion.rs  lib.rs  poles.rs
epi-cli/: Cargo.toml  build.rs
epi-cli/schemas/: README.md  package.json  validate-datasets.ts
epi-cli/schemas/src/: enums.ts  frontmatter.ts  identity.ts  index.ts  node.ts  relations.ts  runtime.ts  validator.ts
epi-cli/schemas/tests/: enums.test.ts  identity.test.ts  node.test.ts  validator.test.ts
epi-cli/scripts/notebooklm/: query_notebook.py  setup.sh
epi-cli/scripts/redisvl_cache_service/: redisvl_cache_service.py  setup.sh
epi-cli/src/: lib.rs  main.rs  up.rs
epi-cli/src/agent/: agent_dirs.rs  auth.rs  capabilities.rs  chat.rs  claw_runtime.rs  codex_runtime.rs  doctor.rs  extensions.rs  hooks.rs  install.rs  mod.rs  plugin_manifest.rs  plugins.rs  session.rs  skills.rs  spawn.rs  subagents.rs  vak.rs
epi-cli/src/agent/techne/: mod.rs
epi-cli/src/anuttara/: mod.rs
epi-cli/src/app/: mod.rs
epi-cli/src/book/: mod.rs
epi-cli/src/code/: mod.rs
epi-cli/src/core/: mod.rs  overlay.rs  write_gate.rs
epi-cli/src/core/knowing/: cache.rs  graph.rs  mod.rs  render.rs  types.rs  vimarsa.rs
epi-cli/src/epii/: chat.rs  fsm.rs  knowing.rs  logos.rs  mod.rs  vimarsa.rs
epi-cli/src/epii/gnosis/: mod.rs
epi-cli/src/ffi/: m1.rs  m2.rs  mod.rs  nara.rs
epi-cli/src/gate/: approvals.rs  auth.rs  browser.rs  channels.rs  chat.rs  config.rs  config_tui.rs  devices.rs  events.rs  kairos.rs  lock.rs  mod.rs  models.rs  nara.rs  nodes.rs  parity.rs  protocol.rs  runs.rs  runtime.rs  server.rs  session_store.rs  sessions.rs  skills.rs  spacetimedb_bridge.rs  subagents.rs  system.rs  tls.rs  update.rs  wizard.rs  workspace.rs
epi-cli/src/graph/: alignment_validator.rs  api.rs  bidirectional_sync.rs  client.rs  coordinate_array_parser.rs  dataset_import.rs  doctor.rs  embeddings.rs  link_enforcement.rs  mapper.rs  meta.rs  mod.rs  redis_cache.rs  relationship_manager.rs  schema.rs  seed.rs  semantic.rs  semantic_cache.rs  sync.rs  sync_coordinator.rs  sync_orchestrator.rs
epi-cli/src/graph/retrieval/: coordinate.rs  graphrag.rs  hybrid.rs  mod.rs
epi-cli/src/kbase/: mod.rs
epi-cli/src/mahamaya/: mod.rs
epi-cli/src/nara/: clock.rs  identity.rs  kairos.rs  lens.rs  logos.rs  medicine.rs  mod.rs  oracle.rs  pratibimba.rs  rotational.rs  transcription.rs  weights.rs  wind.rs
epi-cli/src/notebook/: mod.rs
epi-cli/src/paramasiva/: mod.rs
epi-cli/src/parashakti/: mod.rs
epi-cli/src/portal/: clock_renderer.rs  clock_state.rs  mod.rs  persist.rs  registry.rs  theme.rs
epi-cli/src/portal/plugins/: clock.rs  m0.rs  m1.rs  m2.rs  m3.rs  m4.rs  m5.rs  mini_clock.rs  mod.rs  shared.rs  spine.rs  unified_clock.rs
epi-cli/src/sesh/: mod.rs  session.rs
epi-cli/src/sync/: mod.rs
epi-cli/src/techne/: mod.rs
epi-cli/src/techne/gnosis/: chunker.rs  config.rs  docling_client.rs  ingest.rs  mod.rs  query.rs  sync.rs
epi-cli/src/tui/: knowing.rs  mod.rs  title.rs
epi-cli/src/vault/: frontmatter.rs  kairos.rs  mod.rs  pasu.rs  paths.rs  templates.rs
epi-cli/src/vimarsa/: mod.rs
epi-cli/tests/: agent_agents.rs  agent_claw_runtime.rs  agent_codex_runtime.rs  agent_dirs.rs  agent_docs.rs  agent_extensions.rs  agent_extensions_ta_onta.rs  agent_hooks.rs  agent_install.rs  agent_models.rs  agent_native_pi_contract.rs  agent_plugin_install.rs  agent_plugins.rs  agent_session_commands.rs  agent_spawn.rs  agent_vak.rs  aletheia_scaffold.rs  coordinate_reorg_commands.rs  core_knowing.rs  gate_agent_rpc.rs  gate_agent_wait.rs  gate_auth.rs  gate_channels_cron_voice.rs  gate_chat.rs  gate_chat_abort.rs  gate_chat_send.rs  gate_config_system.rs  gate_config_tui.rs  gate_connect_protocol.rs  gate_electron_controller_compat.rs  gate_electron_smoke.rs  gate_full_parity_contract.rs  gate_khora_integration.rs  gate_lineage_contract.rs  gate_lock_tls.rs  gate_nara_contract.rs  gate_nodes_devices_browser.rs  gate_omnipanel_contract.rs  gate_parity_manifest.rs  gate_protocol.rs  (+27 more)
epi-cli/tests/common/: mod.rs
epi-cli/tests/support/: mod.rs
epi-gnostic/: pyproject.toml  schema-context.md
epi-gnostic/cypher/: 00-bootstrap.cypher  02-relations-upsert.cypher  03-pointers-resolve.cypher
epi-gnostic/epi_gnostic/: cli.py  config.py
epi-gnostic/epi_gnostic/enrichment/: prompts.py
epi-gnostic/epi_gnostic/storage/: __init__.py  neo4j_vector.py
epi-gnostic/scripts/: enrich.py
epi-gnostic/tests/: conftest.py  test_config.py  test_cross_namespace.py  test_neo4j_vector.py  test_wrapper.py
(+3785 files in other folders)
