[package]
name = "epi-logos"
version = "0.1.0"
edition = "2021"
description = "The Master CLI for the Epi-Logos coordinate system — ontology-is-code"
license = "MIT OR Apache-2.0"
keywords = ["philosophy", "coordinate-system", "cli", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "epi"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
libc = "0.2"
color-eyre = "0.6"
chrono = { version = "0.4.44", features = ["serde"] }

[build-dependencies]
cc = "1"
