[package]
name = "epi"
version = "0.1.0"
edition = "2021"
description = "The Master CLI for the Epi-Logos coordinate system"

[lib]
path = "src/lib.rs"

[[bin]]
name = "epi"
path = "src/main.rs"
test = false

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dirs = "5"
libc = "0.2"
color-eyre = "0.6"
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.24"
rcgen = "0.13"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
cc = "1"
