[project]
name = "epi-gnostic"
version = "0.1.0"
description = "Gnostic namespace RAG pipeline for Epi-Logos"
requires-python = ">=3.10"
dependencies = [
    # "raganything>=1.2.0",  # TODO: uncomment before Task 3
    "lightrag-hku>=1.0.0",
    "neo4j>=5.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
epi-gnostic = "epi_gnostic.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
