[package]
name = "epi-s2-graph-services"
version = "0.1.0"
edition = "2021"
description = "S2 graph service contracts for Neo4j and Redis-backed semantic cache"
license = "MIT OR Apache-2.0"

[lib]
name = "epi_s2_graph_services"
path = "src/lib.rs"

[dependencies]
epi-s2-graph-schema = { path = "../graph-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
