[package]
name = "epi-s2-graph-services"
version = "0.1.0"
edition = "2021"
description = "S2 graph service contracts for Neo4j and Redis-backed semantic cache"
license = "MIT OR Apache-2.0"

[lib]
name = "epi_s2_graph_services"
path = "src/lib.rs"

[dependencies]
epi-s2-graph-schema = { path = "../graph-schema" }
epi-s3-gateway-contract = { path = "../../S3/gateway-contract" }
epi-s3-redis-context = { path = "../../S3/redis-context" }
epi-kernel-contract = { path = "../../epi-kernel-contract" }
portal-core = { path = "../../S0/portal-core" }
neo4rs = "0.9.0-rc.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
uuid = { version = "1", features = ["v5"] }

[dev-dependencies]
epi-s1-hen-compiler-core = { path = "../../S1/hen-compiler-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
