[package]
name = "epi-spacetime-module"
version = "0.1.0"
edition = "2021"
description = "SpacetimeDB WASM module for Epi-Logos gateway/client/agent registration"

# ─── WASM Deployment Note ───────────────────────────────────────────────────
#
# This crate is the real SpacetimeDB 2.x module crate for the S3/S3' live
# registration and projection plane.
#
#   1. Rust must satisfy the selected SpacetimeDB 2.x dependency family.
#
#   2. To build for the canonical WASM target:
#      rustup target add wasm32-unknown-unknown
#      cargo build --target wasm32-unknown-unknown
#
#   3. To build/deploy through the SpacetimeDB toolchain:
#      spacetime build
#      spacetime publish epi-logos-runtime

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "2"

[profile.release]
opt-level = "s"
lto = true
