[package]
name = "epi-s3-gateway-contract"
version = "0.1.0"
edition = "2021"
description = "S3 gateway protocol and method contract for Epi-Logos"
license = "MIT OR Apache-2.0"

[lib]
name = "epi_s3_gateway_contract"
path = "src/lib.rs"

[dependencies]
epi-kernel-contract = { path = "../../epi-kernel-contract" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18", features = ["v4"] }
