[package]
name = "epi-s3-graphiti-runtime"
version = "0.1.0"
edition = "2021"
description = "S3 Graphiti runtime adapter contracts and compatibility HTTP client"
license = "MIT OR Apache-2.0"

[lib]
name = "epi_s3_graphiti_runtime"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
epi-s3-gateway-contract = { path = "../gateway-contract" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "time"] }
