[package]
name = "epi-s3-redis-context"
version = "0.1.0"
edition = "2021"
description = "S3 Redis runtime context and RedisVL bridge residency contract"
license = "MIT OR Apache-2.0"

[lib]
name = "epi_s3_redis_context"
path = "src/lib.rs"

[dependencies]
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
