[project]
name = "epi-gnostic"
version = "0.1.0"
description = "Gnostic namespace RAG pipeline for Epi-Logos"
requires-python = ">=3.10"
dependencies = [
    "raganything>=1.2.0",
    "lightrag-hku>=1.0.0",
    "neo4j>=5.0.0",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "graphiti-core>=0.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
epi-gnostic = "epi_gnostic.cli:main"
epi-graphiti = "epi_gnostic.graphiti_service:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["epi_gnostic*"]
