[package]
name = "epi-s5-epii-autoresearch-core"
version = "0.1.0"
edition = "2021"

[dependencies]
epi-s1-hen-compiler-core = { path = "../../S1/hen-compiler-core" }
portal-core = { path = "../../S0/portal-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
